force-app/main/default/objects/Account/fields/Technical_Service_Specialist__c.field-meta.xml
<CustomField>
    <fullName>Technical_Service_Specialist__c</fullName>
    <description>Added by TJ, 01/07/2012, related to case 42754</description>
    <inlineHelpText>Business Service Specialist</inlineHelpText>
    <label>Technical Service Specialist</label>
    <length>100</length>
    <type>Text</type>
</CustomField>