force-app/main/default/objects/Account/fields/Technology__c.field-meta.xml
<CustomField>
    <fullName>Technology__c</fullName>
    <label>Technology</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>A&amp;E Firm</fullName>
            </value>
            <value>
                <fullName>Air Compressors</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
            <value>
                <fullName>Application Completion Assistance</fullName>
            </value>
            <value>
                <fullName>Assessments</fullName>
            </value>
            <value>
                <fullName>Chillers</fullName>
            </value>
            <value>
                <fullName>Cool Roofs</fullName>
            </value>
            <value>
                <fullName>Food Service</fullName>
            </value>
            <value>
                <fullName>HVAC</fullName>
            </value>
            <value>
                <fullName>IT</fullName>
            </value>
            <value>
                <fullName>Lighting</fullName>
            </value>
            <value>
                <fullName>Process</fullName>
            </value>
            <value>
                <fullName>Pumps</fullName>
            </value>
            <value>
                <fullName>Residential HVAC</fullName>
            </value>
            <value>
                <fullName>VFDs</fullName>
            </value>
            <value>
                <fullName>VSDs</fullName>
            </value>
            <value>
                <fullName>Window Film</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>