force-app/main/default/objects/Account/fields/Temp_TradeAlly_Id__c.field-meta.xml
<CustomField>
    <fullName>Temp_TradeAlly_Id__c</fullName>
    <label>Temp TradeAlly Id</label>
    <length>30</length>
    <type>Text</type>
</CustomField>