force-app/main/default/objects/Account/fields/Tenant_ID__c.field-meta.xml
<CustomField>
    <fullName>Tenant_ID__c</fullName>
    <inlineHelpText>Unique number which identifies the tenant for a specific account in the CMS billing system.</inlineHelpText>
    <label>Tenant ID</label>
    <length>2</length>
    <type>Text</type>
</CustomField>