force-app/main/default/objects/Account/fields/Tenant_Owner__c.field-meta.xml
<CustomField>
    <fullName>Tenant_Owner__c</fullName>
    <label>Tenant_Owner</label>
    <length>255</length>
    <type>Text</type>
</CustomField>