force-app/main/default/objects/Account/fields/Trade_Ally_Territories__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ally_Territories__c</fullName>
    <label>Trade Ally Territories</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>DE IN</fullName>
            </value>
            <value>
                <fullName>DE OH</fullName>
            </value>
            <value>
                <fullName>DE KY</fullName>
            </value>
            <value>
                <fullName>DE NC</fullName>
            </value>
            <value>
                <fullName>DE SC</fullName>
            </value>
            <value>
                <fullName>DEP NC</fullName>
            </value>
            <value>
                <fullName>DEP SC</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>