force-app/main/default/objects/Account/fields/Trade_Ally_Type__c.field-meta.xml
<CustomField>
    <fullName>Trade_Ally_Type__c</fullName>
    <label>Trade Ally Type</label>
    <length>100</length>
    <type>Text</type>
</CustomField>