force-app/main/default/objects/Account/fields/UpsertId__c.field-meta.xml
<CustomField>
    <fullName>UpsertId__c</fullName>
    <externalId>true</externalId>
    <label>UpsertId</label>
    <length>100</length>
    <type>Text</type>
</CustomField>