force-app/main/default/objects/Account/fields/Utility__c.field-meta.xml
<CustomField>
    <fullName>Utility__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>