force-app/main/default/objects/Account/fields/Utility_Formula__c.field-meta.xml
<CustomField>
    <fullName>Utility_Formula__c</fullName>
    <formula>Utility__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Utility Formula</label>
    <type>Text</type>
</CustomField>