force-app/main/default/objects/Account/fields/Utility_Service_Type__c.field-meta.xml
<CustomField>
    <fullName>Utility_Service_Type__c</fullName>
    <label>Utility Service Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Gas</fullName>
            </value>
            <value>
                <fullName>Electric</fullName>
            </value>
            <value>
                <fullName>Combo</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>