force-app/main/default/objects/Account/fields/Validated_Address__c.field-meta.xml
<CustomField>
    <fullName>Validated_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Validated Address</label>
    <type>Checkbox</type>
</CustomField>