force-app/main/default/objects/Account/fields/Vendor_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Number__c</fullName>
    <displayFormat>1{00000000}</displayFormat>
    <inlineHelpText>This field is used as the vendor number on the payment export file.</inlineHelpText>
    <label>Vendor Number</label>
    <type>AutoNumber</type>
</CustomField>