force-app/main/default/objects/Account/fields/VendorId__c.field-meta.xml
<CustomField>
    <fullName>VendorId__c</fullName>
    <label>VendorId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>