force-app/main/default/objects/Account/fields/Zip_Code__c.field-meta.xml
<CustomField>
    <fullName>Zip_Code__c</fullName>
    <formula>LEFT(SUBSTITUTE( ShippingPostalCode, &apos;-&apos;, &apos;&apos;),5)</formula>
    <label>Zip Code</label>
    <type>Text</type>
</CustomField>