force-app/main/default/objects/Account/recordTypes/Trade_Ally.recordType-meta.xml
<RecordType>
    <fullName>Trade_Ally</fullName>
    <active>true</active>
    <label>Trade Ally</label>
</RecordType>