force-app/main/default/objects/Account/listViews/All_ETO.listView-meta.xml
<ListView>
    <fullName>All_ETO</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Provider__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider__c</field>
        <operation>equals</operation>
        <value>Energy Trust</value>
    </filters>
    <label>All ETO</label>
</ListView>