force-app/main/default/objects/Account/listViews/All_PPL.listView-meta.xml
<ListView>
    <fullName>All_PPL</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.SITE</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider__c</field>
        <operation>equals</operation>
        <value>PPL Electric Utilities</value>
    </filters>
    <label>All PPL</label>
</ListView>