force-app/main/default/objects/Account/listViews/AllCenterPoint.listView-meta.xml
<ListView>
    <fullName>AllCenterPoint</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>ACCOUNT.PHONE1</columns>
    <columns>ACCOUNT.TYPE</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>ACCOUNT.ADDRESS1_STREET</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Provider__c</field>
        <operation>equals</operation>
        <value>CenterPoint Energy</value>
    </filters>
    <label>All - CenterPoint</label>
</ListView>